[tool.poetry]
name = "dmuu"
version = "0.1.0"
description = ""
authors = ["kathehs <s204621@student.dtu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pyomo = "^6.8.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
scikit-learn-extra = "^0.3.0"
numpy = ">=1.0.0,<2.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
